# autumn_homework

./: README.md
.github/workflows/: ci.yml
scripts/: run_cases.py
task_01/: CMakeLists.txt
task_01/src/: graph.cpp  graph.hpp  main.cpp  network_analyzer.cpp  network_analyzer.hpp  test.cpp
task_02/: CMakeLists.txt
task_02/src/: city_connector.cpp  city_connector.hpp  main.cpp  test.cpp
task_03/: CMakeLists.txt
task_03/src/: main.cpp  test.cpp  topological_sorter.cpp  topological_sorter.hpp
task_04/: CMakeLists.txt
task_04/src/: johnson_algorithm.cpp  johnson_algorithm.hpp  main.cpp  test.cpp
task_05/: CMakeLists.txt
task_05/src/: mst.cpp  mst.hpp  test.cpp
task_06/: CMakeLists.txt
task_06/src/: max_flow_solver.cpp  max_flow_solver.hpp  test.cpp
task_07/: CMakeLists.txt
task_07/src/: segment_tree_rmq.cpp  segment_tree_rmq.hpp  test.cpp
task_08/: CMakeLists.txt
task_08/src/: LCASolver.cpp  LCASolver.hpp  test.cpp
